<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/introduction"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/introduction"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/skipIntroductionCb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skipIntroduction" />

    <Button
        android:id="@+id/continueBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="continueToTabs"
        android:text="@string/continueText" 
        android:gravity="center_horizontal"/>

</LinearLayout>