<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:gravity="top|center_vertical"
        android:orientation="horizontal"
        android:weightSum="1.0" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/vowelTv"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#808080"
                android:textSize="80sp" />

            <TextView
                android:id="@+id/vowelSoundTv"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#808080"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:orientation="vertical" >

            <ImageSwitcher
                android:id="@+id/wordIs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/wordTv"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="#808080"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/descriptionTv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/description_x"
        android:textColor="#808080"
        android:textSize="8sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/previousBt"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:drawableBottom="@drawable/previous"
            android:onClick="previousVowel"
            android:text="@string/previous" />

        <ToggleButton
            android:id="@+id/autoplayTb"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="autoPlay"
            android:textOff="Autoplay\nOFF"
            android:textOn="Autoplay\nON" />

        <Button
            android:id="@+id/audioBt"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:drawableBottom="@drawable/speaker"
            android:onClick="playAudio"
            android:text="@string/playAudio" />

        <Button
            android:id="@+id/nextBt"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:drawableBottom="@drawable/next"
            android:onClick="nextVowel"
            android:text="@string/next" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/practice"
        android:textColor="#808080"
        android:textSize="14sp" />

    <GridView
        android:id="@+id/vowelsoundview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/view_border"
        android:columnWidth="70dp"
        android:gravity="center"
        android:horizontalSpacing="1dp"
        android:numColumns="4"
        android:stretchMode="columnWidth"
        android:verticalSpacing="1dp" />

</LinearLayout>